[tool.poetry]
name = "python-web-hw12"
version = "0.1.0"
description = ""
authors = ["Val <yermakvaleriy@gmail.com>"]
readme = "README.txt"

[tool.poetry.dependencies]
python = "^3.11"
unicorn = "^2.0.1.post1"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
asyncpg = "^0.29.0"
